--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Portfolio | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -14,62 +14,64 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../images/og.jpg" />
-</head>
-<body class="is-preload">
+  </head>
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!-- Main -->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>My Art</h1>
-                    <p>My personal projects, as well as projects in which I participated or are part of</p>
-                </header>
-                <ul class="tabs">
-                    <li>
-                        <h3>All</h3>
-                        <div class="gallery">
-                            <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
-                            <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
-							<a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
-							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
-							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
-                            <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
-							<a href="https://verloka.com/projects/exchange/"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
-                            <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
-                            <a href="https://verloka.com/projects/wallpaper/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
-                            <a href="https://verloka.com/projects/incomeexpenses/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
-							<a href="https://verloka.com/projects/happyfarm/"><img src="../images/app/slhf.jpg" alt="Swipe Land - Happy Farm" /></a>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>Commercial</h3>
-                        <div class="gallery">
-                            <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
-                            <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
-							<a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
-							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
-							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
-                            <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>Non commercial</h3>
-                        <div class="gallery">
-							<a href="https://verloka.com/projects/exchange/"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
-							<a href="https://verloka.com/projects/incomeexpenses/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
-                            <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
-							<a href="https://verloka.com/projects/wallpaper/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
-							<a href="https://verloka.com/projects/happyfarm/"><img src="../images/app/slhf.jpg" alt="Swipe Land - Happy Farm" /></a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
+      <!-- Main -->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>My Art</h1>
+            <p>My personal projects, as well as projects in which I participated or are part of</p>
+          </header>
+          <ul class="tabs">
+            <li>
+              <h3>All</h3>
+              <div class="gallery">
+                <a href="https://verloka.com/projects/myokk/"><img src="../images/app/kk.jpg" alt="MyOKK" /></a>
+                <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
+                <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
+                <a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
+                <a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
+                <a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
+                <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
+                <a href="https://verloka.com/projects/exchange/"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
+                <a href="https://verloka.com/projects/jp/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
+                <a href="https://verloka.com/projects/wallpaper/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
+                <a href="https://verloka.com/projects/incomeexpenses/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
+                <a href="https://verloka.com/projects/happyfarm/"><img src="../images/app/slhf.jpg" alt="Swipe Land - Happy Farm" /></a>
+              </div>
+            </li>
+            <li>
+              <h3>Commercial</h3>
+              <div class="gallery">
+                <a href="https://verloka.com/projects/myokk/"><img src="../images/app/kk.jpg" alt="MyOKK" /></a>
+                <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
+                <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
+                <a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
+                <a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
+                <a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
+                <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
+              </div>
+            </li>
+            <li>
+              <h3>Non commercial</h3>
+              <div class="gallery">
+                <a href="https://verloka.com/projects/exchange/"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
+                <a href="https://verloka.com/projects/incomeexpenses/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
+                <a href="https://verloka.com/projects/jp/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
+                <a href="https://verloka.com/projects/wallpaper/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
+                <a href="https://verloka.com/projects/happyfarm/"><img src="../images/app/slhf.jpg" alt="Swipe Land - Happy Farm" /></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -82,5 +84,5 @@
     <script src="../assets/js/breakpoints.min.js"></script>
     <script src="../assets/js/util.js"></script>
     <script src="../assets/js/main.js"></script>
-</body>
+  </body>
 </html>
