--- a/projects/aspirecore/index.html
+++ b/projects/aspirecore/index.html
@@ -1,119 +1,73 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
+  <head>
+    <title>Aspire Core | Vadym Verloka</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <meta property="og:title" content="Vadym Verloka" />
+    <meta property="og:url" content="https://verloka.com/" />
+    <meta property="og:description" content="Personal webpage." />
+    <meta property="og:determiner" content="the" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en-US" />
+    <meta property="og:locale:alternate" content="uk-UA" />
+    <meta property="og:locale:alternate" content="ru-RU" />
+    <meta property="og:image" content="../../images/og.jpg" />
+  </head>
 
-<head>
-	<title>Aspire Core | Vadym Verloka</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="../../assets/css/main.css" />
-	<meta property="og:title" content="Vadym Verloka" />
-	<meta property="og:url" content="https://verloka.com/" />
-	<meta property="og:description" content="Personal webpage." />
-	<meta property="og:determiner" content="the" />
-	<meta property="og:type" content="website" />
-	<meta property="og:locale" content="en-US" />
-	<meta property="og:locale:alternate" content="uk-UA" />
-	<meta property="og:locale:alternate" content="ru-RU" />
-	<meta property="og:image" content="../../images/og.jpg" />
-</head>
+  <body class="is-preload">
+    <div id="page-wrapper">
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-<body class="is-preload">
-	<div id="page-wrapper">
-		<header id="header"></header>
-		<nav id="menu"></nav>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Aspire Core
+              <code>Gambling</code>
+            </h1>
 
-		<!--content-->
-		<section id="main" class="wrapper style2">
-			<div class="inner">
-				<header class="major special">
-					<h1>
-						Aspire Core
-						<code>Gambling</code>
-					</h1>
+            <p>A fully-rounded iGaming solution that covers Casino, Sportsbook, proprietary games and game aggregation.</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/acpw.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET Framework 4.8/.NET Core 3/.NET 5</li>
+            <li>ASP.NET/ASP.NET MVC</li>
+            <li>ADO.NET/Dapper</li>
+            <li>HTML/JS/CSS</li>
+            <li>MS SQL Server</li>
+            <li>Redis</li>
+            <li>Kafka</li>
+            <li>gRPC/WCF</li>
+            <li>Hangfire</li>
+            <li>Kubernetes</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>Game Providers</li>
+            <li>Sports Betting Providers</li>
+            <li>Payment Providers</li>
+            <li>KYC</li>
+          </ul>
+        </div>
+      </section>
 
-					<p>A fully-rounded iGaming solution that covers Casino, Sportsbook, proprietary games and game
-						aggregation.</p>
-				</header>
-				<a href="#" class="image main"><img src="../../images/app/acpw.jpg" alt="" /></a>
-				<p>Aspire Core is the engine that powers your business success.</p>
-				<h4>Solution content</h4>
-				<ul>
-					<li>
-						FRONT END MANAGEMENT
-						<ul>
-							<li>API Framework Flexibility</li>
-							<li>Multi-Brand Capabilities with many languages</li>
-							<li>Dedicated CMS</li>
-							<li>Fully Responsive HTML5 Solution</li>
-						</ul>
-					</li>
-					<li>
-						CAMPAIGN MANAGEMENT AND BONUS ENGINE
-						<ul>
-							<li>Proprietary Campaign Management</li>
-							<li>Player Segmentation and Lifetime Value</li>
-							<li>Tools</li>
-							<li>Bonus Contribution Models</li>
-						</ul>
-					</li>
-					<li>
-						PAYMENT AND RISK MANAGEMENT
-						<ul>
-							<li>Payment Services</li>
-							<li>Pay N Play</li>
-							<li>Integrated Unified Cashier</li>
-							<li>Risk Management and Fraud Prevention</li>
-						</ul>
-					</li>
-					<li>
-						CONTENT MANAGEMENT
-						<ul>
-							<li>Sports</li>
-							<li>Live dealer</li>
-							<li>Casino content</li>
-						</ul>
-					</li>
-					<li>
-						OPEN INTEGRATION LAYER
-						<ul>
-							<li>E2E customer data platform</li>
-							<li>Bonus API</li>
-						</ul>
-					</li>
-				</ul>
+      <div id="BotomContent"></div>
+    </div>
 
-				<table>
-					<thead>
-						<tr>
-							<td>
-								<h4>Lets talk</h4>
-							</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Website:</td>
-							<td><a href="https://www.aspireglobal.com/"><span class="label">Aspire Global</span></a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</section>
-
-		<div id="BotomContent"></div>
-	</div>
-
-	<!-- Scripts -->
-	<script src="../../assets/js/jquery.min.js"></script>
-	<script src="../../assets/js/loader.js"></script>
-	<script src="../../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../../assets/js/jquery.selectorr.min.js"></script>
-	<script src="../../assets/js/browser.min.js"></script>
-	<script src="../../assets/js/breakpoints.min.js"></script>
-	<script src="../../assets/js/util.js"></script>
-	<script src="../../assets/js/main.js"></script>
-</body>
-
+    <!-- Scripts -->
+    <script src="../../assets/js/jquery.min.js"></script>
+    <script src="../../assets/js/loader.js"></script>
+    <script src="../../assets/js/jquery.scrollex.min.js"></script>
+    <script src="../../assets/js/jquery.scrolly.min.js"></script>
+    <script src="../../assets/js/jquery.selectorr.min.js"></script>
+    <script src="../../assets/js/browser.min.js"></script>
+    <script src="../../assets/js/breakpoints.min.js"></script>
+    <script src="../../assets/js/util.js"></script>
+    <script src="../../assets/js/main.js"></script>
+  </body>
 </html>
