--- a/projects/happyfarm/index.html
+++ b/projects/happyfarm/index.html
@@ -1,7 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Swipe Land - Happy Farm | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,32 +14,37 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
-</head>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!--content-->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>
-                        Swipe Land - Happy Farm
-                        <code>Gaming</code>
-                    </h1>
-                    <p>Tile matching game for Android</p>
-                </header>
-                <a href="#" class="image main"><img src="../../images/app/swlhd.png" alt="" /></a>
-                <p>Game for Android on the Unity engine. The implementation of the already classic game mechanics -
-                    Match-3. The app is now available on Google Play.</p>
-                <center><a href="https://play.google.com/store/apps/details?id=com.verloka.swipeland.happyfarm"><img
-                            src="../../images/google-play-badge.png" alt="" width="256" /></a></center>
-            </div>
-        </section>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Swipe Land - Happy Farm
+              <code>Gaming</code>
+            </h1>
+            <p>Tile matching game for Android</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/swlhd.png" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET Core 3</li>
+            <li>Unity Engine</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>Google Play</li>
+          </ul>
+        </div>
+      </section>
 
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -53,6 +57,5 @@
     <script src="../../assets/js/breakpoints.min.js"></script>
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
