--- a/projects/jp/index.html
+++ b/projects/jp/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Liberty Career Finance | Vadym Verloka</title>
+    <title>Jesus Password | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
@@ -26,31 +26,26 @@
         <div class="inner">
           <header class="major special">
             <h1>
-              Liberty Career Finance
-              <code>Fintech</code>
+              Jesus Password
+              <code>Tools</code>
             </h1>
-            <p>Customer-facing loan servicing web portal and a mobile app for a credit card company.</p>
+            <p>Password Manager for your devices, save, manage and sync your passwords.</p>
           </header>
-          <a href="#" class="image main"><img src="../../images/app/loan.jpg" alt="" /></a>
+          <a href="#" class="image main"><img src="../../images/app/jppw.jpg" alt="" /></a>
           <h4>Tech stack</h4>
           <ul>
-            <li>.NET Framework 4.6/.NET Core 3/.NET 6</li>
-            <li>ASP.NET MVC/ASP.NET Core</li>
-            <li>ADO.NET</li>
-            <li>HTML/jQuery/CSS</li>
-            <li>MS SQL Server</li>
-            <li>WinForms</li>
-            <li>Kubernetes</li>
+            <li>.NET Framework 4.8</li>
+            <li>UWP</li>
           </ul>
           <h4>Integrations</h4>
           <ul>
-            <li>AWS Cloud</li>
-            <li>Credit Score Providers</li>
-            <li>Payment Providers</li>
-            <li>Email Provider</li>
-            <li>SMS Provider</li>
-            <li>Documents Sign Provider</li>
+            <li>Windows Store</li>
+            <li>OneDrive</li>
           </ul>
+
+          <center>
+            <a href="https://apps.microsoft.com/detail/9nblggh691x4"><img src="../../images/windows-store-button.png" alt="" width="256" /></a>
+          </center>
         </div>
       </section>
 
