--- a/projects/myokk/index.html
+++ b/projects/myokk/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Liberty Career Finance | Vadym Verloka</title>
+    <title>MyOKK | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
@@ -26,29 +26,25 @@
         <div class="inner">
           <header class="major special">
             <h1>
-              Liberty Career Finance
-              <code>Fintech</code>
+              MYOKK
+              <code>ERP</code>
             </h1>
-            <p>Customer-facing loan servicing web portal and a mobile app for a credit card company.</p>
+
+            <p>System for internal accounting of the company.</p>
           </header>
-          <a href="#" class="image main"><img src="../../images/app/loan.jpg" alt="" /></a>
+          <a href="#" class="image main"><img src="../../images/app/kkpw.jpg" alt="" /></a>
           <h4>Tech stack</h4>
           <ul>
-            <li>.NET Framework 4.6/.NET Core 3/.NET 6</li>
-            <li>ASP.NET MVC/ASP.NET Core</li>
-            <li>ADO.NET</li>
-            <li>HTML/jQuery/CSS</li>
+            <li>.NET 7</li>
+            <li>ASP.NET Core</li>
+            <li>EF Core/ADO.NET</li>
+            <li>Angular/TypeScript/SCSS</li>
             <li>MS SQL Server</li>
-            <li>WinForms</li>
-            <li>Kubernetes</li>
           </ul>
           <h4>Integrations</h4>
           <ul>
-            <li>AWS Cloud</li>
-            <li>Credit Score Providers</li>
-            <li>Payment Providers</li>
-            <li>Email Provider</li>
-            <li>SMS Provider</li>
+            <li>Azure Cloud</li>
+            <li>Accounting System</li>
             <li>Documents Sign Provider</li>
           </ul>
         </div>
