--- a/projects/pecp/index.html
+++ b/projects/pecp/index.html
@@ -1,81 +1,65 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
+  <head>
+    <title>Packaging Platform | Vadym Verloka</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <meta property="og:title" content="Vadym Verloka" />
+    <meta property="og:url" content="https://verloka.com/" />
+    <meta property="og:description" content="Personal webpage." />
+    <meta property="og:determiner" content="the" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en-US" />
+    <meta property="og:locale:alternate" content="uk-UA" />
+    <meta property="og:locale:alternate" content="ru-RU" />
+    <meta property="og:image" content="../../images/og.jpg" />
+  </head>
 
-<head>
-	<title>Packaging Platform | Vadym Verloka</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="../../assets/css/main.css" />
-	<meta property="og:title" content="Vadym Verloka" />
-	<meta property="og:url" content="https://verloka.com/" />
-	<meta property="og:description" content="Personal webpage." />
-	<meta property="og:determiner" content="the" />
-	<meta property="og:type" content="website" />
-	<meta property="og:locale" content="en-US" />
-	<meta property="og:locale:alternate" content="uk-UA" />
-	<meta property="og:locale:alternate" content="ru-RU" />
-	<meta property="og:image" content="../../images/og.jpg" />
-</head>
+  <body class="is-preload">
+    <div id="page-wrapper">
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-<body class="is-preload">
-	<div id="page-wrapper">
-		<header id="header"></header>
-		<nav id="menu"></nav>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Packaging Platform
+              <code>eCommerce</code>
+            </h1>
 
-		<!--content-->
-		<section id="main" class="wrapper style2">
-			<div class="inner">
-				<header class="major special">
-					<h1>
-						Packaging Platform
-						<code>eCommerce</code>
-					</h1>
+            <p>An exchange for customers and experts who will be able to communicate to fulfill orders in the goods packaging niche.</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/pecpb.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET 7</li>
+            <li>ASP.NET Core</li>
+            <li>React/SCSS</li>
+            <li>MongoDB</li>
+            <li>Kubernetes</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>AWS Cloud</li>
+          </ul>
+        </div>
+      </section>
 
-					<p>An exchange for customers and experts who will be able to communicate to fulfill orders in the goods packaging niche.</p>
-				</header>
-				<a href="#" class="image main"><img src="../../images/app/pecpb.jpg" alt="" /></a>
-				<h4>Features that the product hast</h4>
-				<ul>
-					<li>User Management</li>
-					<li>Monetization & Payments</li>
-					<li>Content Management</li>
-					<li>Project Requests Submission</li>
-					<li>Advertisements</li>
-					<li>Notifications</li>
-				</ul>
+      <div id="BotomContent"></div>
+    </div>
 
-				<table>
-					<thead>
-						<tr>
-							<td>
-								<h4>Lets talk</h4>
-							</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Website:</td>
-							<td><a href="#"><span class="label">TBD</span></a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</section>
-
-		<div id="BotomContent"></div>
-	</div>
-
-	<!-- Scripts -->
-	<script src="../../assets/js/jquery.min.js"></script>
-	<script src="../../assets/js/loader.js"></script>
-	<script src="../../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../../assets/js/jquery.selectorr.min.js"></script>
-	<script src="../../assets/js/browser.min.js"></script>
-	<script src="../../assets/js/breakpoints.min.js"></script>
-	<script src="../../assets/js/util.js"></script>
-	<script src="../../assets/js/main.js"></script>
-</body>
-
+    <!-- Scripts -->
+    <script src="../../assets/js/jquery.min.js"></script>
+    <script src="../../assets/js/loader.js"></script>
+    <script src="../../assets/js/jquery.scrollex.min.js"></script>
+    <script src="../../assets/js/jquery.scrolly.min.js"></script>
+    <script src="../../assets/js/jquery.selectorr.min.js"></script>
+    <script src="../../assets/js/browser.min.js"></script>
+    <script src="../../assets/js/breakpoints.min.js"></script>
+    <script src="../../assets/js/util.js"></script>
+    <script src="../../assets/js/main.js"></script>
+  </body>
 </html>
