--- a/projects/rozmovy/index.html
+++ b/projects/rozmovy/index.html
@@ -1,7 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Rozmovy | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,74 +14,41 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
-</head>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!--content-->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>
-                        Rozmovy
-                        <code>Neural networks</code>
-                    </h1>
-                    <p>Speech Recognition SaaS Solution</p>
-                </header>
-                <a href="#" class="image main"><img src="../../images/app/spb.jpg" alt="" /></a>
-                <p>The solution is primarily intended for contact centers for the purpose of increasing productivity and
-                    indicators of the quality of customer service. The main feature of the solution is speech
-                    recognition (currently American English, German and Russian). This feature allows you to fire
-                    employees who listen to calls. Instead, the solution will do this and translate into text.</p>
-                <h4>Other equally important functions</h4>
-                <ul>
-                    <li>Reporting, including report designer.</li>
-                    <li>Estimation of audio (and agents too).</li>
-                    <li>Search audio in words or phrases.</li>
-                    <li>Support for agent departments.</li>
-                    <li>Agent Personal Area.</li>
-                    <li>A full-fledged web application that allows you to manage them from anywhere in the World.</li>
-                </ul>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Rozmovy
+              <code>Neural networks</code>
+            </h1>
+            <p>Speech Recognition SaaS Solution</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/spb.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET Core 3</li>
+            <li>ASP.NET Core MVC</li>
+            <li>HTML/jQuery/CSS</li>
+            <li>WPF</li>
+            <li>EF Core</li>
+            <li>MS SQL Server</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>LLMs</li>
+          </ul>
+        </div>
+      </section>
 
-                <table>
-                    <thead>
-                        <tr>
-                            <td>
-                                <h4>Buy or get help</h4>
-                            </td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Website:</td>
-                            <td><a href="http://softpiua.com/"><span class="label">SoftPI</span></a></td>
-                        </tr>
-                        <tr>
-                            <td>EMail:</td>
-                            <td>
-                                <a href="mailto:office@softpiua.com"><span
-                                        class="label">office@softpiua.com</span></a><br />
-                                <a href="mailto:support@softpiua.com"><span
-                                        class="label">support@softpiua.com</span></a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Phone:</td>
-                            <td>
-                                <a href="tel:+380573930611"><span class="label">+380 57 393 06 11</span></a><br />
-                                <a href="tel:+380503004804"><span class="label">+380 50 300 48 04</span></a><br />
-                                <a href="tel:+380892501247"><span class="label">+380 89 250 12 47</span></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -95,6 +61,5 @@
     <script src="../../assets/js/breakpoints.min.js"></script>
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
