--- a/projects/wallpaper/index.html
+++ b/projects/wallpaper/index.html
@@ -1,7 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Wallpaper Changer 2 | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,41 +14,45 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
-</head>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!--content-->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>
-                        Wallpaper Changer 2
-                        <code>Tools</code>
-                    </h1>
-                    <p>Application for wallpaper managmend</p>
-                </header>
-                <a href="#" class="image main"><img src="../../images/app/wpch.jpg" alt="" /></a>
-                <p>
-                    The application for installing HD wallpapers on your desktop.
-                    In the application, you can configure the replacement of wallpaper on a schedule. Select one of
-                    several image sources. Liked wallpaper can be added to favorites, so that you can then install them
-                    again.
-                    In Walpaper Chnager 2 there is a parametric search for images by color, by tag (available in one of
-                    the wallpaper sources). The application runs in the background and does not take a lot of resources.
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Wallpaper Changer 2
+              <code>Tools</code>
+            </h1>
+            <p>Application for wallpaper managmend</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/wpch.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET Framework 4.6</li>
+            <li>UWP</li>
+            <li>WPF</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>OneDrive</li>
+            <li>Bing</li>
+            <li>Flickr</li>
+            <li>Unsplash</li>
+          </ul>
 
-                </p>
+          <center>
+            <a href="https://www.microsoft.com/en-us/p/wallpaper-changer-2/9mz0zkr55f9g"><img src="../../images/windows-store-button.png" alt="" width="256" /></a>
+          </center>
+        </div>
+      </section>
 
-                <center><a href="https://www.microsoft.com/en-us/p/wallpaper-changer-2/9mz0zkr55f9g"><img
-                            src="../../images/windows-store-button.png" alt="" width="256"></a></center>
-
-            </div>
-        </section>
-
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -62,6 +65,5 @@
     <script src="../../assets/js/breakpoints.min.js"></script>
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
