--- a/projects/exchange/index.html
+++ b/projects/exchange/index.html
@@ -1,7 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Exchange CMS | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,40 +14,35 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
-</head>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!--content-->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>
-                        Exchange CMS
-                        <code>Social network</code>
-                    </h1>
-                    <p>Q&A Engine</p>
-                </header>
-                <a href="#" class="image main"><img src="../../images/app/exc.jpg" alt="" /></a>
-                <p>Exchange CMS is a stunning, professional, and flexible social questions and answers .NET application
-                    specially designed for Online Communities, Niche Questions and Answers Websites, Marketing Websites,
-                    Developers Websites, or any kind of Social Communities.</p>
-                <h4>Important functions</h4>
-                <ul>
-                    <li>Adaptive design.</li>
-                    <li>User rating system.</li>
-                    <li>Support for MS SQL, MySQL and PostgreSQL databases.</li>
-                    <li>Website personalization for the user.</li>
-                    <li>Content complaints system.</li>
-                    <li>Complex caching mechanism improves performance on weak servers.</li>
-                </ul>
-            </div>
-        </section>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Exchange CMS
+              <code>Social network</code>
+            </h1>
+            <p>Q&A Engine</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/exc.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET Core 3</li>
+            <li>ASP.NET Core MVC</li>
+            <li>EF Core</li>
+            <li>MS SQL Server/PostgreSQL/MySQL</li>
+          </ul>
+        </div>
+      </section>
 
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -61,6 +55,5 @@
     <script src="../../assets/js/breakpoints.min.js"></script>
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
