--- a/projects/incomeexpenses/index.html
+++ b/projects/incomeexpenses/index.html
@@ -1,7 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Income&Expenses | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,40 +14,42 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
-</head>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!--content-->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>
-                        Income&Expenses
-                        <code>Accounting</code>
-                    </h1>
-                    <p>Easy to use the Budget Planner</p>
-                </header>
-                <a href="#" class="image main"><img src="../../images/app/incexp.jpg" alt="" /></a>
-                <p>
-                    Allows you to control costs, keep track of income, save purchase history in the form of expenses. It
-                    is also possible to compare different items of expenses or income with similar ones for different
-                    periods.
-                    Allows you to keep history for more than one year. Shows the current state of balance.
-                    This application stores its data in your OneDrive cloud. This allows you to use the application on
-                    different devices on Windows and synchronize data between them.
-                </p>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Income&Expenses
+              <code>Accounting</code>
+            </h1>
+            <p>Easy to use the Budget Planner</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/incexp.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET 4.8</li>
+            <li>UWP</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>Microsoft Store</li>
+            <li>OneDrive</li>
+          </ul>
 
-                <center><a href="https://www.microsoft.com/store/apps/9PH2MP1W0138"><img
-                            src="../../images/windows-store-button.png" alt="" width="256"></a></center>
+          <center>
+            <a href="https://www.microsoft.com/store/apps/9PH2MP1W0138"><img src="../../images/windows-store-button.png" alt="" width="256" /></a>
+          </center>
+        </div>
+      </section>
 
-            </div>
-        </section>
-
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -61,6 +62,5 @@
     <script src="../../assets/js/breakpoints.min.js"></script>
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
