--- a/projects/tariscope/index.html
+++ b/projects/tariscope/index.html
@@ -1,7 +1,6 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Tariscope | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,75 +14,43 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
-</head>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <div id="page-wrapper">
-        <header id="header"></header>
-        <nav id="menu"></nav>
+      <header id="header"></header>
+      <nav id="menu"></nav>
 
-        <!--content-->
-        <section id="main" class="wrapper style2">
-            <div class="inner">
-                <header class="major special">
-                    <h1>
-                        Tariscope
-                        <code>Telecom</code>
-                    </h1>
-                    <p>Call accounting software</p>
-                </header>
-                <a href="#" class="image main"><img src="../../images/app/trsc.jpg" alt="" /></a>
-                <p>The Tariscope is a telecom billing solution for telecommunications service providers of telephony and
-                    Internet. Also it is a call accounting software for companies that have PBX (VoIP PBX) systems.</p>
-                <h4>It allows:</h4>
-                <ul>
-                    <li>to keep accounting of call details from your PBXs</li>
-                    <li>to manage and control costs on calls or IP traffic</li>
-                    <li>to analyze the work of employees associated with the use of phones or the Internet</li>
-                    <li>to automate the generation of call accounting reports on the schedule</li>
-                    <li>to use a powerful subscriber data management system</li>
-                    <li>to automatically generate invoices, receipts, details of services provided for each customer
-                    </li>
-                    <li>flexibility to adapt to the requirements of your company</li>
-                    <li>to carry out settlements with other telecom service providers</li>
-                </ul>
+      <!--content-->
+      <section id="main" class="wrapper style2">
+        <div class="inner">
+          <header class="major special">
+            <h1>
+              Tariscope
+              <code>Telecom</code>
+            </h1>
+            <p>Call accounting software</p>
+          </header>
+          <a href="#" class="image main"><img src="../../images/app/trsc.jpg" alt="" /></a>
+          <h4>Tech stack</h4>
+          <ul>
+            <li>.NET Framework 4.6/.NET Core 3</li>
+            <li>ASP.NET/ASP.NET MVC</li>
+            <li>HTML/jQuery/CSS</li>
+            <li>WinForms/WPF</li>
+            <li>ADO.NET</li>
+            <li>MS SQL Server</li>
+            <li>WCF</li>
+          </ul>
+          <h4>Integrations</h4>
+          <ul>
+            <li>Virtual PBXs</li>
+            <li>Physical PBXs</li>
+          </ul>
+        </div>
+      </section>
 
-                <table>
-                    <thead>
-                        <tr>
-                            <td>
-                                <h4>Buy or get help</h4>
-                            </td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Website:</td>
-                            <td><a href="http://tariscope.com/"><span class="label">Tariscope</span></a></td>
-                        </tr>
-                        <tr>
-                            <td>EMail:</td>
-                            <td>
-                                <a href="mailto:office@softpiua.com"><span
-                                        class="label">office@softpiua.com</span></a><br />
-                                <a href="mailto:support@softpiua.com"><span
-                                        class="label">support@softpiua.com</span></a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Phone:</td>
-                            <td>
-                                <a href="tel:+380573930611"><span class="label">+380 57 393 06 11</span></a><br />
-                                <a href="tel:+380503004804"><span class="label">+380 50 300 48 04</span></a><br />
-                                <a href="tel:+380892501247"><span class="label">+380 89 250 12 47</span></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-
-        <div id="BotomContent"></div>
+      <div id="BotomContent"></div>
     </div>
 
     <!-- Scripts -->
@@ -96,6 +63,5 @@
     <script src="../../assets/js/breakpoints.min.js"></script>
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
