Update MS store badges

--- a/projects/incomeexpenses/index.html
+++ b/projects/incomeexpenses/index.html
@@ -44,7 +44,8 @@
           </ul>
 
           <center>
-            <a href="https://www.microsoft.com/store/apps/9PH2MP1W0138"><img src="../../images/windows-store-button.png" alt="" width="256" /></a>
+            <script type="module" src="https://get.microsoft.com/badge/ms-store-badge.bundled.js"></script>
+            <ms-store-badge productid="9ph2mp1w0138" window-mode="full" theme="auto" size="large" language="ru-ru" animation="on"> </ms-store-badge>
           </center>
         </div>
       </section>
