--- a/projects/wallpaper/index.html
+++ b/projects/wallpaper/index.html
@@ -47,7 +47,8 @@
           </ul>
 
           <center>
-            <a href="https://www.microsoft.com/en-us/p/wallpaper-changer-2/9mz0zkr55f9g"><img src="../../images/windows-store-button.png" alt="" width="256" /></a>
+            <script type="module" src="https://get.microsoft.com/badge/ms-store-badge.bundled.js"></script>
+            <ms-store-badge productid="9mz0zkr55f9g" window-mode="full" theme="auto" size="large" language="ru-ru" animation="on"> </ms-store-badge>
           </center>
         </div>
       </section>
