--- a/projects/jp/index.html
+++ b/projects/jp/index.html
@@ -44,7 +44,8 @@
           </ul>
 
           <center>
-            <a href="https://apps.microsoft.com/detail/9nblggh691x4"><img src="../../images/windows-store-button.png" alt="" width="256" /></a>
+            <script type="module" src="https://get.microsoft.com/badge/ms-store-badge.bundled.js"></script>
+            <ms-store-badge productid="9nblggh691x4" window-mode="full" theme="auto" size="large" language="ru-ru" animation="on"> </ms-store-badge>
           </center>
         </div>
       </section>
