Update project and cert+

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,6 +31,7 @@
             <li>
               <h3>All</h3>
               <div class="gallery">
+                <a href="https://verloka.com/projects/des/"><img src="../images/app/des.jpg" alt="Digital Excise" /></a>
                 <a href="https://verloka.com/projects/myokk/"><img src="../images/app/kk.jpg" alt="MyOKK" /></a>
                 <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
                 <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
@@ -48,6 +49,7 @@
             <li>
               <h3>Commercial</h3>
               <div class="gallery">
+                <a href="https://verloka.com/projects/des/"><img src="../images/app/des.jpg" alt="Digital Excise" /></a>
                 <a href="https://verloka.com/projects/myokk/"><img src="../images/app/kk.jpg" alt="MyOKK" /></a>
                 <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
                 <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
